--- a/index.html
+++ b/index.html
@@ -23,39 +23,26 @@
             <ul class="custom-scrollbar">
                 <li>
                     <div class="logo-wrapper waves-effect">
-                        <a href="#!/"><img src="img/polytech.png" class="img-fluid flex-center"></a>
+                        <a href="#!/" class="logo-polytech"><img src="img/polytech.png"
+                                class="img-fluid flex-center"></a>
                     </div>
                 </li>
-                <li ng-if="$root.isConnected">
+                <li ng-if="$root.isConnected" class="menu">
                     <ul class="collapsible collapsible-accordion mt-0">
                         <li>
-                            <a class="collapsible-header waves-effect arrow-r" href="#!/">
-                                <i class="fa fa-user"></i> &nbsp; Page 1
+                            <a class="collapsible-header waves-effect arrow-r" href="#!/home">
+                                <i class="fa fa-home text-primary"></i> &nbsp; Accueil
                             </a>
                         </li>
-                        <li>
-                            <a class="collapsible-header waves-effect arrow-r" href="#!/page2">
-                                <i class="fa fa-user"></i> &nbsp; Page 2
+                        <li ng-if="$root.admin == 1">
+                            <a class="collapsible-header waves-effect arrow-r" href="#!/admin">
+                                <i class="fa fa-cogs text-primary"></i> &nbsp; Administration
                             </a>
-                        </li>
-                        <li>
-                            <a class="collapsible-header waves-effect arrow-r">
-                                <i class="fa fa-envelope"></i> &nbsp; Dropdown<i
-                                    class="fa fa-angle-down rotate-icon"></i>
-                            </a>
-                            <div class="collapsible-body">
-                                <ul class="list-unstyled">
-                                    <li><a href="#" class="waves-effect">FAQ</a>
-                                    </li>
-                                    <li><a href="#" class="waves-effect">Write a message</a>
-                                    </li>
-                                </ul>
-                            </div>
                         </li>
                     </ul>
                 </li>
             </ul>
-            <div class="sidenav-bg mask-strong"></div>
+            <div class="sidenav-bg mask-light"></div>
         </div>
         <nav class="navbar fixed-top navbar-toggleable-md navbar-expand-lg scrolling-navbar double-nav">
             <div class="float-left">
@@ -66,7 +53,8 @@
             </div>
             <ul class="nav navbar-nav nav-flex-icons ml-auto" ng-if="$root.isConnected">
                 <li class="nav-item text-muted">
-                    {{ $root.prenom + ' ' + $root.nom }}&nbsp;|&nbsp;
+                    <span class="badge badge-danger"
+                        ng-if="$root.admin == 1">Admin</span>&nbsp;&nbsp;{{ $root.prenom + ' ' + $root.nom }}&nbsp;|&nbsp;
                 </li>
                 <li class="nav-item cursor-pointer" ng-click="$root.deconnexion()">
                     Déconnexion <i class="fa fa-power-off" aria-hidden="true"></i>
@@ -83,6 +71,7 @@
     <script src="js/jquery.js"></script>
     <script src="js/angular.js"></script>
     <script src="js/angular-route.js"></script>
+    <script src="node_modules/ng-file-upload/dist/ng-file-upload-all.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/mdb.min.js"></script>
     <script src="js/hammer.min.js"></script>
@@ -97,14 +86,21 @@
     <script type="text/javascript" src="app/controllers/loginController.js"></script>
     <script type="text/javascript" src="app/controllers/registerController.js"></script>
     <script type="text/javascript" src="app/controllers/formController.js"></script>
+    <script type="text/javascript" src="app/controllers/modifierStageController.js"></script>
     <script type="text/javascript" src="app/controllers/homeController.js"></script>
-    <script type="text/javascript" src="app/controllers/page2Controller.js"></script>
+    <script type="text/javascript" src="app/controllers/evalController.js"></script>
+    <script type="text/javascript" src="app/controllers/evalcompetencesController.js"></script>
+    <script type="text/javascript" src="app/controllers/adminController.js"></script>
     <script type="text/javascript" src="app/controllers/404Controller.js"></script>
 
     <script type="text/javascript" src="app/factories/userFactory.js"></script>
     <script type="text/javascript" src="app/factories/questionsFactory.js"></script>
     <script type="text/javascript" src="app/factories/entreprisesFactory.js"></script>
     <script type="text/javascript" src="app/factories/enseignantsFactory.js"></script>
+    <script type="text/javascript" src="app/factories/stageFactory.js"></script>
+    <script type="text/javascript" src="app/factories/evalFactory.js"></script>
+    <script type="text/javascript" src="app/factories/retardsFactory.js"></script>
+    <script type="text/javascript" src="app/factories/mailsFactory.js"></script>
 </body>
 
 </html>
